stop service logo stretching

--- a/src/views/Service/Service.scss
+++ b/src/views/Service/Service.scss
@@ -124,9 +124,11 @@
 
   img {
     height: pxtorem(175px);
+    width: pxtorem(175px);
 
     @include for-tablet-portrait-down {
       height: pxtorem(50px);
+      width: pxtorem(50px);
       border-radius: 50%;
     }
   }
